@@ -26,42 +26,68 @@ jobs:
       os: osx
       language: shell
       install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
         - eval "$(pyenv init -)"
-        - pyenv install --skip-existing 3.5.8
-        - pyenv global 3.5.8
+        - pyenv install --skip-existing 3.5.10
+        - pyenv global 3.5.10
       env: TOXENV=py35
     - name: Python 3.6 on macOS
       os: osx
       language: shell
       install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
         - eval "$(pyenv init -)"
-        - pyenv install --skip-existing 3.6.9
-        - pyenv global system 3.6.9
+        - pyenv install --skip-existing 3.6.12
+        - pyenv global system 3.6.12
       env: TOXENV=py36
     - name: Python 3.7 on macOS
       os: osx
       language: shell
       install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
         - eval "$(pyenv init -)"
-        - pyenv install --skip-existing 3.7.5
-        - pyenv global system 3.7.5
+        - pyenv install --skip-existing 3.7.9
+        - pyenv global system 3.7.9
       env: TOXENV=py37
     - name: Python 3.8 on macOS
       os: osx
       language: shell
       install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
         - eval "$(pyenv init -)"
-        - pyenv install --skip-existing 3.8.0
-        - pyenv global system 3.8.0
+        - pyenv install --skip-existing 3.8.6
+        - pyenv global system 3.8.6
       env: TOXENV=py38
-    # - name: Python 3.9 on macOS
-    #   os: osx
-    #   language: shell
-    #   install:
-    #     - eval "$(pyenv init -)"
-    #     - pyenv install --skip-existing 3.9-dev
-    #     - pyenv global system 3.9-dev
-    #   env: TOXENV=py39
+    - name: Python 3.9 on macOS
+      os: osx
+      language: shell
+      install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.9-dev
+        - pyenv global system 3.9-dev
+      env: TOXENV=py39
+    - name: Python 3.10 on macOS
+      os: osx
+      language: shell
+      install:
+        - unset PYENV_ROOT
+        - curl -L https://github.com/pyenv/pyenv-installer/raw/master/bin/pyenv-installer | bash
+        - export PATH="$HOME/.pyenv/bin:$PATH"
+        - eval "$(pyenv init -)"
+        - pyenv install --skip-existing 3.10-dev
+        - pyenv global system 3.10-dev
+      env: TOXENV=py310
     - name: PyPy 3.6 on GNU/Linux
       python: pypy3
       env: TOXENV=pypy3
@@ -80,9 +106,9 @@ jobs:
     - name: Python 3.9 on GNU/Linux
       python: 3.9-dev
       env: TOXENV=py39
-    # - name: Python 3.10 on GNU/Linux
-    #   python: nightly
-    #   env: TOXENV=py310
+    - name: Python 3.10 on GNU/Linux
+      python: nightly
+      env: TOXENV=py310
 
 addons:
   apt:
