@@ -13,7 +13,7 @@ deps =
     pytest
     # Must pin that version to support PyPy3
     pypy3: numpy==1.15.4
-    py3{10,9,8,7,6,5}: numpy
+    py3{9,8,7,6,5}: numpy
     pillow
     wheel
 commands =
